@@ -1218,3 +1218,5 @@ even when they weren't all that small in the view.
 Added in(i) function to rcalc for more flexible channel evaluation.
 
 Replaced all calls to vfork() with regular fork() calls.
+
+Fixed bug in glarendx for dgr calculation with sources behind view.
